--- a/master.css
+++ b/master.css
@@ -1,12 +1,19 @@
-/* body { */
+body {
     
-    /* background-image: url("https://image.shutterstock.com/image-vector/vector-realistic-isolated-neon-sign-260nw-1182783112.jpg"); */
-    /* background-repeat: no-repeat;
-    background-size: 100%;
-    box-shadow: 0px 0px 5px skyblue; */
+    background-image: url("https://image.shutterstock.com/image-vector/vector-realistic-isolated-neon-sign-260nw-1182783112.jpg"); 
+    background-repeat: no-repeat;
+    background-size: 1450px 900px;
+    /* box-shadow: 0px 0px 5px skyblue; */
     
     
-/* } 
+    
+} 
 button {
     box-shadow: 0px 0px 5px lightgreen;
+    border-radius: 20px;
+    width: 30%;
+    padding: 10px 10px;
+    position: absolute;
+    top: 50%;
+    left: 35%;
 }
